# jasmine

./: .gitignore  Makefile  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: ci.yml
docs/: firewall.md
docs/spikes/: mdns-discovery.md  tauri-ws-coexistence.md
src/: App.tsx  app-shell.test.tsx  main.tsx  markdown-smoke.test.tsx  router.tsx  routing.test.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/jasmine-core/: Cargo.toml
src-tauri/crates/jasmine-core/src/: identity.rs  lib.rs  og.rs  protocol.rs  richtext.rs  settings.rs
src-tauri/crates/jasmine-core/tests/: hello_world.rs  identity.rs  og.rs  protocol.rs  rich_text.rs  settings.rs
src-tauri/crates/jasmine-core/tests/fixtures/: rich_text_samples.json
src-tauri/crates/jasmine-crypto/: Cargo.toml
src-tauri/crates/jasmine-crypto/src/: file_crypto.rs  kdf.rs  keypair.rs  keystore.rs  lib.rs  sender_keys.rs  session.rs  symmetric.rs
src-tauri/crates/jasmine-discovery/: Cargo.toml
src-tauri/crates/jasmine-discovery/src/: lib.rs  manager.rs  mdns.rs  udp.rs
src-tauri/crates/jasmine-messaging/: Cargo.toml
src-tauri/crates/jasmine-messaging/src/: chat.rs  lib.rs  transport.rs  ws_client.rs  ws_server.rs
src-tauri/crates/jasmine-messaging/tests/: chat.rs  encrypted_integration.rs  group.rs  ws.rs
src-tauri/crates/jasmine-storage/: Cargo.toml
src-tauri/crates/jasmine-storage/migrations/: V1__initial.sql  V2__edit_delete_richtext.sql  V3__crypto_and_resume.sql  V4__sender_key_epochs.sql  V5__folder_file_status.sql  V6__vector_clock_og_cache_reply_index.sql
src-tauri/crates/jasmine-storage/src/: lib.rs  sqlite.rs
src-tauri/crates/jasmine-storage/tests/: sqlite_storage.rs
src-tauri/crates/jasmine-transfer/: Cargo.toml
src-tauri/crates/jasmine-transfer/src/: folder.rs  lib.rs  manager.rs  receiver.rs  sender.rs  thumbnail.rs
src-tauri/crates/jasmine-transfer/tests/: encrypted_integration.rs  folder.rs  folder_coordinator.rs  manager.rs  receiver.rs  sender.rs  thumbnail.rs
src-tauri/permissions/: app-commands.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: bridge.rs  calls.rs  discovery.rs  environment.rs  identity.rs  messaging.rs  mod.rs  og.rs  setup.rs  tests.rs  transfers.rs  types.rs
src-tauri/tests/: integration.rs  integration_p2a.rs  integration_p2b.rs  integration_p2c.rs
src-tauri/tests/common/: mod.rs
src/components/Call/: Call.module.css  Call.test.tsx  CallControlBar.tsx  CallManager.tsx  GroupCallView.test.tsx  GroupCallView.tsx  InCallView.tsx  IncomingCallOverlay.tsx  OutgoingCallOverlay.tsx  ParticipantBadge.tsx  ScreenShareIndicator.test.tsx  ScreenShareIndicator.tsx  icons.tsx  index.ts
src/components/ChatView/: ChatHeader.module.css  ChatHeader.tsx  ChatView.module.css  ChatView.tsx  MessageBubble.module.css  MessageBubble.tsx  OgPreviewCard.module.css  OgPreviewCard.test.tsx  OgPreviewCard.tsx  ReplyThread.module.css  ReplyThread.tsx
src/components/DeviceList/: DeviceList.module.css  DeviceList.test.tsx  DeviceList.tsx  DeviceListItem.module.css  DeviceListItem.tsx
src/components/FileTransfer/: FileReceiveDialog.test.tsx  FileReceiveDialog.tsx  FileTransferPanel.module.css  FileTransferPanel.test.tsx  FileTransferPanel.tsx  TransferItem.tsx
src/components/FolderTransfer/: FolderReceiveDialog.module.css  FolderReceiveDialog.test.tsx  FolderReceiveDialog.tsx  FolderTransferItem.tsx  FolderTransferPanel.module.css  FolderTransferPanel.test.tsx  FolderTransferPanel.tsx
src/components/GroupChat/: CreateGroupModal.module.css  CreateGroupModal.test.tsx  CreateGroupModal.tsx  GroupChat.module.css  GroupChat.test.tsx  GroupChat.tsx  GroupChatWrapper.tsx  MemberPanel.module.css  MemberPanel.test.tsx  MemberPanel.tsx
src/components/ImageThumbnail/: ImageThumbnail.module.css  ImageThumbnail.test.tsx  ImageThumbnail.tsx
src/components/MentionAutocomplete/: MentionAutocomplete.module.css  MentionAutocomplete.test.tsx  MentionAutocomplete.tsx
src/components/MessageInput/: MessageInput.module.css  MessageInput.test.tsx  MessageInput.tsx
src/components/RichTextRenderer/: RichTextRenderer.module.css  RichTextRenderer.tsx  index.ts
src/components/Settings/: AppSettingsSection.tsx  LanguageSection.test.tsx  (+6 more)
src/hooks/: useCallSupport.test.ts  useCallSupport.ts  useNotifications.test.ts  useNotifications.ts
src/i18n/: completeness.test.ts  i18n.test.ts  i18n.ts
src/services/: webrtc.test.ts  webrtc.ts
src/stores/: callStore.test.ts  callStore.ts  chatStore.bridge.test.ts  chatStore.test.ts  chatStore.ts  folderTransferStore.test.ts  folderTransferStore.ts  groupStore.bridge.test.ts  groupStore.ts  peerStore.bridge.test.ts  peerStore.test.ts  peerStore.ts  transferStore.test.ts  transferStore.ts
src/styles/: theme.css
src/test/: setup.ts
src/types/: peer.ts
src/utils/: url-detect.test.ts  url-detect.ts  webrtc-support.test.ts  webrtc-support.ts
tests/e2e/: e2e-tests.mjs  launch-instances.sh  run-e2e.sh
(+12 files in other folders)
