[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["you"]

[workspace.dependencies]
jasmine-core = { path = "crates/jasmine-core" }
jasmine-crypto = { path = "crates/jasmine-crypto" }
jasmine-discovery = { path = "crates/jasmine-discovery" }
jasmine-messaging = { path = "crates/jasmine-messaging" }
jasmine-storage = { path = "crates/jasmine-storage" }
jasmine-transfer = { path = "crates/jasmine-transfer" }
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
mockall = "0.13"

[package]
name = "jasmine-app"
version.workspace = true
description = "A Tauri App"
authors.workspace = true
edition.workspace = true
default-run = "jasmine"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "jasmine"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
jasmine-core.workspace = true
jasmine-crypto.workspace = true
jasmine-discovery.workspace = true
jasmine-messaging.workspace = true
jasmine-storage.workspace = true
jasmine-transfer.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio.workspace = true
tokio-util = "0.7"
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
futures-util = "0.3"
sha2 = "0.10"
tempfile = "3"
tokio-tungstenite = "0.27"
