[package]
name = "jasmine-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
hostname = "0.4"
jasmine-crypto.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
mockall.workspace = true
