[package]
name = "jasmine-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
hkdf = "0.12"
keyring = "3"
rand_core = { version = "0.6", features = ["getrandom"] }
serde.workspace = true
sha2 = "0.10"
thiserror.workspace = true
uuid.workspace = true
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["derive"] }
