[package]
name = "jasmine-messaging"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
futures-util = "0.3"
jasmine-core.workspace = true
jasmine-crypto.workspace = true
jasmine-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite = "0.27"
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
