[package]
name = "jasmine-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
jasmine-core.workspace = true
r2d2 = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
